# nixai

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
nixai/: agent.py  code-embedder.py  nixdoc-embedder.py  nixdoc.py  query-vectorstore.py  semantic_chunker.py  settings.py
